# ros2bag_tagger

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
mcap_augment/: cli.py  map_marker.py
ros2bag_tagger/: cli.py  dataset_tags.py  mcap_parser.py  tag_template.py
src/ros2bag_tagger/: __init__.py  dataset_tags.py  mcap_parser.py  tag_manager.py  tag_template.py
src/ros2bag_tagger/cli/: __init__.py  analysis.py  batch.py  convert.py  tagspec.py  template.py
src/ros2bag_tagger/schema/: tag_schema.json
src/ros2bag_tagger/utils/: bag_info.py
tests/cli/: test_tagspec.py
