[project]
name = "ros2bag_tagger"
version = "0.2.0"
description = "Tagging utility for MCAP log files (ROS-agnostic)."
license = { text = "Apache-2.0" }
requires-python = ">=3.9"

# 依存を mcap ライブラリのみに
dependencies = [
  "mcap>=1.2.2",
  "mcap-ros2-support>=0.5.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
  "black>=24.3",
  "mypy>=1.8",
  "pre-commit>=3.7",
]

[project.scripts]
ros2bag-tagger = "ros2bag_tagger.cli:main"
